--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 html, body {
   font-family: 'Lato', sans-serif;
-  font-family: 'Raleway', sans-serif;
 }
 
 /* コンテンツ幅と中央よせ */
 .inner {
-  width: 97%;
   margin: 0 auto;
   max-width: 1100px;
 }
@@ -45,6 +43,10 @@ html, body {
   color: #000;
 }
 
+.mobile__menu__btn {
+  display: none;
+}
+
 /* main-first-content */
 
 .back__gry {
@@ -59,13 +61,13 @@ html, body {
   font-size: 90px;
   font-weight: 700;
   color: #74cfae;
-  padding-top: 250px;
+  padding: 320px 0 250px;
 }
 
 .bootstrap{
   font-size: 30px;
   color: #c0c0c0;
-  padding: 20px 0 250px 0 ;
+  margin-top: 20px;
 }
 
 /* イントロダクション */
@@ -80,7 +82,7 @@ html, body {
 }
 
 .phone-img {
-  padding: 50px 0 0 0;
+  padding-top: 50px;
   text-align: center;
   width: 40%;
 }
@@ -93,26 +95,35 @@ html, body {
 
 .introduction__text--title {
   font-size: 24px;
-  padding: 50px 0 35px 0;
+  padding: 50px 0 35px;
+}
+
+/* 見出しの共通クラス */
+.Raleway {
+  font-family: 'Raleway', sans-serif;
 }
 
 .introduction__text--text {
   font-size: 20px;
 }
 
-/* article */
+/* works */
 
 .works {
   text-align: center;
 }
 
+.inner__works {
+  padding: 60px 0 70px;
+}
+
 .works--title {
   font-size: 24px;
-  padding: 60px 0 40px;
 }
 
 .works__ul {
   font-size: 0px;
+  margin-top: 40px;
 }
 
 .works__li {
@@ -140,19 +151,18 @@ html, body {
 
 .works__footer {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 800px;
-    padding: 90px 0 70px;
-    margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 90px;
 }
 
 .works__footer__text {
-  width: 500px;
+  width: 75%;
 }
 
-.works__footer--bottom {
+.works__footer--btn {
   margin-left: 90px;
+  padding: 14px 20px;
 }
 
 /* SKILLS */
@@ -161,14 +171,14 @@ html, body {
   background-color: #4e4e4e;
 }
 
-.skills__inner{
+.skills__inner {
   text-align: center;
+  padding: 70px 0 100px;
 }
 
-.skills__text {
+.skills__title {
   color: #fff;
   font-size: 25px;
-  padding-top: 70px;
 }
 
 .skills__ul {
@@ -179,8 +189,7 @@ html, body {
   display: inline-block;
   font-size: 16px;
   color: #fff;
-  margin-left: 180px;
-  padding: 45px 0 100px;
+  margin: 45px 0 0 180px;
 }
 
 .skills__li:first-child {
@@ -226,4 +235,111 @@ html, body {
 .footer--text {
   padding-top: 20px 0 25px;
   color: #fff;
+}
+
+/* レスポンシブTab */
+
+@media (max-width: 1199px) {
+
+  .inner {
+    width: 97%;
+  }
+
+  /* イントロダクション */
+  .inner__introduction {
+    display: block;
+  }
+
+  .phone-img {
+    margin: 0 auto;
+  }
+
+  .introduction__text {
+    margin: 0 auto;
+  }
+
+  .introduction__text--title {
+    padding-top: 20px;
+    }
+
+  .introduction__text--text {
+    padding-bottom: 25px;
+  }
+
+  /* works */
+  .works__li {
+    display: block;
+    margin: 0px;
+  }
+
+  .works__li:nth-child(4) {
+    margin-top: 80px;
+  }
+
+  .works__footer {
+    display: block;
+    margin-top: 80px;
+  }
+
+  .works__footer__text {
+    margin: 0 auto;
+  }
+
+  .works__footer--btn {
+    display: inline-block;
+    margin: 40px auto 0;
+  }
+
+  /* SKILLS */
+  .skills__li {
+    display: block;
+    margin-top: 88px;
+    margin-left: 0;
+  }
+}
+
+/* レスポンシブSP */
+@media (max-width: 767px) {
+
+  /* header */
+  .mobile__menu__btn {
+    display: block;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+
+  .mobile__menu__btn-line {
+    border: 1px solid #ddd;
+    width: 15px;
+    margin-top: 4px;
+  }
+
+  .mobile__menu__btn-line:first-child {
+    margin-top: 0;
+  }
+
+  .header__btn {
+    display: none;
+  }
+
+  .bolt__theme {
+    padding: 160px 0 130px;
+  }
+
+  .phone-img,
+  .introduction__text {
+    width: 90%;
+  }
+
+  /* logo */
+  .logo__inner {
+    padding: 50px 0;
+  }
+
+  .logo__bottom {
+    display: block;
+    width: auto;
+    margin: 0 15px;
+  }
 }
